# RTLDesignSherpa

./: .aliases  .bashrc  .env_python  .gitignore  .pylintrc  .sourcery.yaml  AXI4_SLAVE_OOO_REQUIREMENTS.md  AdaptabilityImperative_span.md  BF16_ADDER_ARCHITECTURE.md  BF16_ARCHITECTURE.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COVERAGE_TODO.md  FORMAL_PRIORITY.md  FORMAL_TODO.md  GLOBAL_REQUIREMENTS.md  LICENSE  MON-PKT-64-to-128-plan.md  MONBUS_GROUP_AXIL_MASTER_RAWMODE_FLUSH_BUG.md  Makefile  PRD.md  README.md  REFACTOR_STATUS.md  TESTING.md  TODO_RFC_StageE_datapath_perfmon.md  _config.yml  about.md  activate  activate_example  bf16-research.md  blocks_used.csv  blocks_where_used.csv  cmd_cp_apb_slave  cmd_cp_gaxi2claude  cmd_run_veriable_format  cmds  docs.md  env_python  extensions.json  (+17 more)
.claude/: settings.json
.dvt/: default.ls
.github/: PULL_REQUEST_TEMPLATE.md  SECURITY.md
_includes/: head.html  header.html
_layouts/: docs-single.html  docs.html  home.html
common/: README.md  array_multipler.sv  async_fifo.sv  barrel_shifter.sv  bin2gray.sv  bin_to_bcd.sv  booths_multiplier.sv  carry_lookahead_adder.sv  carry_lookahead_subtractor.sv  clock_divider.sv  clock_pulse.sv  count_leading_zeros.sv  counter_bin.sv  counter_gray.sv  debounce.sv  decoder.sv  encoder.sv  find_first_set.sv  find_last_set.sv  fixed_prio_arb.sv  full_adder.sv  full_subtractor.sv  glitch_free_n_dff_arn.sv  gray2bin.sv  half_adder.sv  half_subtractor.sv  hex_to_7seg.sv  interval_weighted_round_robin.sv  leading_one_trailing_one.sv  lfsr.sv  load_clear_counter.sv  macros_inc.svh  (+17 more)
(+8302 files in other folders)
